crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_check_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"check\", \"--help\"])"
---
Run the lexer over a file and report diagnostics

Usage: aozora check [OPTIONS] [FILE]

Arguments:
  [FILE]
          Input path; pass `-` (or omit) to read from stdin
          
          [default: -]

Options:
  -E, --encoding <ENCODING>
          Source encoding. Falls back to `AOZORA_ENCODING`, then the `encoding` key in
          `.aozora.toml`, then auto-detection

          Possible values:
          - auto: Detect the source encoding: valid UTF-8 is used as-is, otherwise the bytes are
            decoded as Shift_JIS. The right default — Aozora files ship as Shift_JIS, but UTF-8
            mirrors are common, and the caller should not have to know which they have
          - utf8: Force UTF-8; error if the input is not valid UTF-8
          - sjis: Force Shift_JIS decoding
          
          [env: AOZORA_ENCODING=]

      --config <PATH>
          Read settings from this `.aozora.toml` instead of searching upward from the working
          directory

      --timing
          Print per-phase timing (read / parse / output) to stderr. Writes only to stderr, so stdout
          stays byte-identical — safe to leave on inside a `render` / `inspect` pipeline

      --timing-format <TIMING_FORMAT>
          Timing report format: `human` (aligned lines + total, the default) or `json` (a
          `{schema_version, phases, total_nanos}` envelope for scripts and agents). Ignored without
          `--timing`

          Possible values:
          - human: Aligned `name  duration` lines plus a total. The default
          - json:  `{"schemaVersion":1,"phases":[{"name","nanos"}],"totalNanos"}` — the agent /
            scripting view
          
          [default: human]

      --watch
          Re-run on every change to the input file (foreground; Ctrl-C to stop). Requires a file
          path — not available on stdin

  -s, --strict
          Exit non-zero on any diagnostic. Also settable via `AOZORA_STRICT` or the `strict` key in
          `.aozora.toml`
          
          [env: AOZORA_STRICT=]

      --diagnostic-format <DIAGNOSTIC_FORMAT>
          How to render diagnostics: `human` (graphical snippet, the default on a terminal), `json`
          (the `aozora::json` envelope, the default when stderr is piped — the machine / agent
          path), or `short` (one grep-able line per diagnostic). Falls back to
          `AOZORA_DIAGNOSTIC_FORMAT`, then `.aozora.toml`

          Possible values:
          - auto:  Graphical (`human`) on a terminal, machine (`json`) when piped
          - human: miette graphical report — source snippet + caret + label + help
          - json:  The `aozora::json` JSON envelope — the cross-binding machine view
          - short: One grep-able line per diagnostic: `path:offset: severity[code]: msg`
          
          [env: AOZORA_DIAGNOSTIC_FORMAT=]

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  aozora check src.txt          # human on a TTY, json when piped
  aozora check --strict src.txt # any diagnostic -> exit 1
  aozora check -E sjis file.txt # Shift_JIS source
  aozora check --timing src.txt # print read/parse/render timing
  cat src.txt | aozora check    # read from stdin
