crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_completions_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"completions\", \"--help\"])"
---
Print a shell completion script (`bash` / `zsh` / `fish` / `powershell` / `elvish`) on stdout.
Generated from the live command tree, so it always matches the installed binary; release tarballs
also ship these under `completions/`

Usage: aozora completions <SHELL>

Arguments:
  <SHELL>  Shell dialect to emit a completion script for [possible values: bash, elvish, fish,
           powershell, zsh]

Options:
  -h, --help     Print help
  -V, --version  Print version
