crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_explain_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"explain\", \"--help\"])"
---
Print prose for a `NodeKind` tag, or help / severity / URL for a diagnostic code

Usage: aozora explain [OPTIONS] <TARGET>

Arguments:
  <TARGET>
          A `NodeKind` camelCase tag (e.g. `ruby`, `angleQuote`; run `aozora kinds` for the list) or
          a diagnostic code (e.g. `aozora::lex::unclosed_bracket`, or the short `unclosed_bracket`)

Options:
      --color <WHEN>
          When to colourise diagnostics: `auto` (colour on a terminal, honouring `NO_COLOR` /
          `CLICOLOR` / `CLICOLOR_FORCE`), `always`, or `never`. Global — accepted after any
          subcommand. Governs `check`'s graphical diagnostics; `kinds` tables are always monochrome

          Possible values:
          - auto:   Colour when stdout is a terminal (honours `NO_COLOR` / `CLICOLOR` /
            `CLICOLOR_FORCE`)
          - always: Always colour, even when piped
          - never:  Never colour
          
          [default: auto]

  -v, --verbose...
          Increase log verbosity (repeatable): `-v` info, `-vv` debug, `-vvv` trace. Logs go to
          stderr only, so stdout — and the JSON / short diagnostic streams — stay byte-identical.
          `AOZORA_LOG` overrides this; cancels against `--quiet` (one axis). Global

  -q, --quiet
          Lower log verbosity to errors only — the opposite end of the `--verbose` axis (a single
          `-v` cancels it). Affects only stderr logging, never stdout. `AOZORA_LOG` overrides it.
          Global

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  aozora explain ruby                          # NodeKind handbook chapter
  aozora explain aozora::lex::unclosed_bracket # diagnostic code -> help + URL
  aozora explain unresolved_gaiji              # short form of the code
