crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_fmt_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"fmt\", \"--help\"])"
---
Format documents: round-trip parse ∘ to_source to the canonical form. Reads stdin, one file, many
files, or directories; `--check` / `--diff` / `--list` verify without writing, `--write` rewrites in
place, `--fix` also canonicalises flagged directive near-misses

Usage: aozora fmt [OPTIONS] [PATH]...

Arguments:
  [PATH]...
          Files or directories to format. Use `-`, or omit, to read stdin

Options:
      --check
          Verify inputs are already formatted; exit 1 if any would change

  -w, --write
          Rewrite files in place (no-op when already canonical)

      --diff
          Print a unified diff for every file that would change. Implies --check

  -l, --list
          List only the paths that would change (gofmt -l). Combine with -w

      --json
          Emit the --check result as machine-readable JSON. Implies --check

  -E, --encoding <ENCODING>
          Source encoding. Falls back to `AOZORA_ENCODING`, then auto-detection (valid UTF-8 as-is,
          otherwise Shift_JIS — the Aozora Bunko default)

          Possible values:
          - auto: Detect the source encoding: valid UTF-8 is used as-is, otherwise the bytes are
            decoded as Shift_JIS. The right default — Aozora files ship as Shift_JIS, but UTF-8
            mirrors are common, and the caller should not have to know which they have
          - utf8: Force UTF-8; error if the input is not valid UTF-8
          - sjis: Force Shift_JIS decoding
          
          [env: AOZORA_ENCODING=]

      --fix
          Rewrite non-canonical directive near-misses to their canonical spelling (e.g. `［＃字下げ終わり］`
          → `［＃ここで字下げ終わり］`), the fixes flagged by the `aozora::lint::non_canonical_directive`
          warnings. Opt-in: without it every directive round-trips its raw bytes verbatim.
          Idempotent, so it composes with every mode

      --config <PATH>
          Read settings from this `.aozora.toml` instead of searching upward from the working
          directory

      --timing
          Print per-phase timing (read / parse / output) to stderr. Writes only to stderr, so stdout
          stays byte-identical — safe to leave on inside a `render` / `inspect` pipeline

      --timing-format <TIMING_FORMAT>
          Timing report format: `human` (aligned lines + total, the default) or `json` (a
          `{schema_version, phases, total_nanos}` envelope for scripts and agents). Ignored without
          `--timing`

          Possible values:
          - human: Aligned `name  duration` lines plus a total. The default
          - json:  `{"schemaVersion":1,"phases":[{"name","nanos"}],"totalNanos"}` — the agent /
            scripting view
          
          [default: human]

      --color <WHEN>
          When to colourise diagnostics: `auto` (colour on a terminal, honouring `NO_COLOR` /
          `CLICOLOR` / `CLICOLOR_FORCE`), `always`, or `never`. Global — accepted after any
          subcommand. Governs `check`'s graphical diagnostics; `kinds` tables are always monochrome

          Possible values:
          - auto:   Colour when stdout is a terminal (honours `NO_COLOR` / `CLICOLOR` /
            `CLICOLOR_FORCE`)
          - always: Always colour, even when piped
          - never:  Never colour
          
          [default: auto]

      --watch
          Re-run on every change to the input file (foreground; Ctrl-C to stop). Requires a file
          path — not available on stdin

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
