crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_init_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"init\", \"--help\"])"
---
Scaffold a new Aozora notation project into `[DIR]` (default the working directory): a commented
`.aozora.toml`, a sample `hon.aozora` exercising ruby / 傍点 / 字下げ so `render` and `check` work
immediately, and a `.gitignore`. Existing files are kept untouched unless `--force`; idempotent.
`--no-sample` / `--no-gitignore` opt out

Usage: aozora init [OPTIONS] [DIR]

Arguments:
  [DIR]
          Directory to scaffold into (created if it does not exist). Defaults to the current
          directory
          
          [default: .]

Options:
      --force
          Overwrite files that already exist. Without it, an existing file is kept untouched — never
          silently clobbered — and reported as skipped

      --no-sample
          Skip the sample `hon.aozora` document

      --no-gitignore
          Skip the `.gitignore`

      --color <WHEN>
          When to colourise diagnostics: `auto` (colour on a terminal, honouring `NO_COLOR` /
          `CLICOLOR` / `CLICOLOR_FORCE`), `always`, or `never`. Global — accepted after any
          subcommand. Governs `check`'s graphical diagnostics; `kinds` tables are always monochrome

          Possible values:
          - auto:   Colour when stdout is a terminal (honours `NO_COLOR` / `CLICOLOR` /
            `CLICOLOR_FORCE`)
          - always: Always colour, even when piped
          - never:  Never colour
          
          [default: auto]

  -v, --verbose...
          Increase log verbosity (repeatable): `-v` info, `-vv` debug, `-vvv` trace. Logs go to
          stderr only, so stdout — and the JSON / short diagnostic streams — stay byte-identical.
          `AOZORA_LOG` overrides this; cancels against `--quiet` (one axis). Global

  -q, --quiet
          Lower log verbosity to errors only — the opposite end of the `--verbose` axis (a single
          `-v` cancels it). Affects only stderr logging, never stdout. `AOZORA_LOG` overrides it.
          Global

      --lang <LOCALE>
          Language for human messages (the stdin guard, the `--watch` banner, and `explain`), as a
          BCP-47 tag: `en` (the default), `ja`, or `zh`. Highest priority in `--lang > AOZORA_LANG >
          .aozora.toml lang > LANG`; unknown locales fall back to `en`. Never affects machine output
          (json / short / codes / exit / schema) or `--encoding`. Global

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  aozora init                 # scaffold the current directory
  aozora init myproject       # scaffold ./myproject (created if absent)
  aozora init --no-sample     # config + .gitignore only
  aozora init --force         # overwrite files that already exist
