crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_inspect_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"inspect\", \"--help\"])"
---
Emit a parsed document's JSON for one `aozora::json` envelope — `nodes` / `pairs` /
`container-pairs` / `diagnostics` / `gaiji` — or the static `slugs` catalogue. The data counterpart
to `schema`: `schema <kind>` prints the JSON Schema, `inspect <kind>` prints a document's data in
that schema, byte-identical to every binding's `*_json()` output

Usage: aozora inspect [OPTIONS] <WHICH> [FILE]

Arguments:
  <WHICH>
          Which JSON envelope to emit

          Possible values:
          - diagnostics:     Per-diagnostic `{ kind, severity, source, span, codepoint? }`
          - nodes:           Per-source-node `{ kind, span }`, sorted by `span.start`
          - pairs:           Per-matched-pair `{ kind, open, close }`
          - container-pairs: Per-container-pair `{ kind, open, close }` (normalized coordinates)
          - gaiji:           Per-外字-reference `{ span, description, mencode, codepoint, resolved }`
          - slugs:           The static ［＃…］ slug catalogue — reads no document input

  [FILE]
          Input path; pass `-` (or omit) to read from stdin
          
          [default: -]

Options:
  -E, --encoding <ENCODING>
          Source encoding. Falls back to `AOZORA_ENCODING`, then the `encoding` key in
          `.aozora.toml`, then auto-detection

          Possible values:
          - auto: Detect the source encoding: valid UTF-8 is used as-is, otherwise the bytes are
            decoded as Shift_JIS. The right default — Aozora files ship as Shift_JIS, but UTF-8
            mirrors are common, and the caller should not have to know which they have
          - utf8: Force UTF-8; error if the input is not valid UTF-8
          - sjis: Force Shift_JIS decoding
          
          [env: AOZORA_ENCODING=]

      --config <PATH>
          Read settings from this `.aozora.toml` instead of searching upward from the working
          directory

      --timing
          Print per-phase timing (read / parse / output) to stderr. Writes only to stderr, so stdout
          stays byte-identical — safe to leave on inside a `render` / `inspect` pipeline

      --timing-format <TIMING_FORMAT>
          Timing report format: `human` (aligned lines + total, the default) or `json` (a
          `{schema_version, phases, total_nanos}` envelope for scripts and agents). Ignored without
          `--timing`

          Possible values:
          - human: Aligned `name  duration` lines plus a total. The default
          - json:  `{"schemaVersion":1,"phases":[{"name","nanos"}],"totalNanos"}` — the agent /
            scripting view
          
          [default: human]

      --watch
          Re-run on every change to the input file (foreground; Ctrl-C to stop). Requires a file
          path — not available on stdin

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  aozora inspect nodes src.txt           # source nodes as JSON
  cat src.txt | aozora inspect pairs     # matched pairs from stdin
  aozora inspect gaiji -E sjis file.txt  # resolved gaiji references
  aozora inspect slugs                   # the static slug catalogue
