crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_lint_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"lint\", \"--help\"])"
---
Report notation-hygiene lints (`aozora::lint::*`) — non-canonical directive near-misses and their
suggested canonical spelling. The authoring-hygiene view (`check` reports every diagnostic); `--fix`
rewrites the flagged near-misses in place (the Tier1 autofix)

Usage: aozora lint [OPTIONS] [FILE]

Arguments:
  [FILE]
          Input path; pass `-` (or omit) to read from stdin
          
          [default: -]

Options:
  -E, --encoding <ENCODING>
          Source encoding. Falls back to `AOZORA_ENCODING`, then the `encoding` key in
          `.aozora.toml`, then auto-detection

          Possible values:
          - auto: Detect the source encoding: valid UTF-8 is used as-is, otherwise the bytes are
            decoded as Shift_JIS. The right default — Aozora files ship as Shift_JIS, but UTF-8
            mirrors are common, and the caller should not have to know which they have
          - utf8: Force UTF-8; error if the input is not valid UTF-8
          - sjis: Force Shift_JIS decoding
          
          [env: AOZORA_ENCODING=]

      --config <PATH>
          Read settings from this `.aozora.toml` instead of searching upward from the working
          directory

      --timing
          Print per-phase timing (read / parse / output) to stderr. Writes only to stderr, so stdout
          stays byte-identical — safe to leave on inside a `render` / `inspect` pipeline. The report
          auto-selects its view like `check`'s diagnostics: aligned `human` lines when stderr is a
          terminal, the `{schemaVersion:1,data:{phases,totalNanos}}` envelope when it is piped

      --watch
          Re-run on every change to the input file (foreground; Ctrl-C to stop). Requires a file
          path — not available on stdin

  -s, --strict
          Exit non-zero if any lint fired. Also settable via `AOZORA_STRICT` or the `strict` key in
          `.aozora.toml`. Shared with `check`
          
          [env: AOZORA_STRICT=]

      --format <FORMAT>
          How to render lints: `human` / `json` / `short` — the same views and `.aozora.toml` /
          `AOZORA_FORMAT` fallbacks as `check`

          Possible values:
          - auto:  Graphical (`human`) on a terminal, machine (`json`) when piped
          - human: miette graphical report — source snippet + caret + label + help
          - json:  The `aozora::json` JSON envelope — the cross-binding machine view
          - short: One grep-able line per diagnostic: `path:offset: severity[code]: msg`
          
          [env: AOZORA_FORMAT=]

      --fix
          Rewrite the flagged directive near-misses to their canonical spelling in place — the
          zero-false-positive Tier1 autofix. This is the same source transform as `aozora fmt --fix
          --write` (one shared engine), so it also canonicalises ruby bars and whitespace, not only
          directives. Needs a file path; it cannot rewrite stdin

      --color <WHEN>
          When to colourise diagnostics: `auto` (colour on a terminal, honouring `NO_COLOR` /
          `CLICOLOR` / `CLICOLOR_FORCE`), `always`, or `never`. Global — accepted after any
          subcommand. Governs `check`'s graphical diagnostics; `kinds` tables are always monochrome

          Possible values:
          - auto:   Colour when stdout is a terminal (honours `NO_COLOR` / `CLICOLOR` /
            `CLICOLOR_FORCE`)
          - always: Always colour, even when piped
          - never:  Never colour
          
          [default: auto]

  -v, --verbose...
          Increase log verbosity (repeatable): `-v` info, `-vv` debug, `-vvv` trace. Logs go to
          stderr only, so stdout — and the JSON / short diagnostic streams — stay byte-identical.
          `AOZORA_LOG` overrides this; cancels against `--quiet` (one axis). Global

  -q, --quiet
          Lower log verbosity to errors only — the opposite end of the `--verbose` axis (a single
          `-v` cancels it). Affects only stderr logging, never stdout. `AOZORA_LOG` overrides it.
          Global

      --lang <LOCALE>
          Language for human messages (the stdin guard, the `--watch` banner, and `explain`), as a
          BCP-47 tag: `en` (the default), `ja`, or `zh`. Highest priority in `--lang > AOZORA_LANG >
          .aozora.toml lang > LANG`; unknown locales fall back to `en`. Never affects machine output
          (json / short / codes / exit / schema) or `--encoding`. Global

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  aozora lint src.txt           # report notation-hygiene lints
  aozora lint --strict src.txt  # any lint -> exit 1 (CI gate)
  aozora lint --fix src.txt     # rewrite flagged near-misses in place
  cat src.txt | aozora lint     # read from stdin (--fix needs a file)
