crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_render_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"render\", \"--help\"])"
---
Render Aozora notation to HTML on stdout

Usage: aozora render [OPTIONS] [FILE]

Arguments:
  [FILE]
          Input path; pass `-` (or omit) to read from stdin
          
          [default: -]

Options:
  -E, --encoding <ENCODING>
          Source encoding. Falls back to `AOZORA_ENCODING`, then the `encoding` key in
          `.aozora.toml`, then auto-detection

          Possible values:
          - auto: Detect the source encoding: valid UTF-8 is used as-is, otherwise the bytes are
            decoded as Shift_JIS. The right default — Aozora files ship as Shift_JIS, but UTF-8
            mirrors are common, and the caller should not have to know which they have
          - utf8: Force UTF-8; error if the input is not valid UTF-8
          - sjis: Force Shift_JIS decoding
          
          [env: AOZORA_ENCODING=]

      --config <PATH>
          Read settings from this `.aozora.toml` instead of searching upward from the working
          directory

      --timing
          Print per-phase timing (read / parse / output) to stderr. Writes only to stderr, so stdout
          stays byte-identical — safe to leave on inside a `render` / `inspect` pipeline. The report
          auto-selects its view like `check`'s diagnostics: aligned `human` lines when stderr is a
          terminal, the `{schemaVersion:1,data:{phases,totalNanos}}` envelope when it is piped

      --watch
          Re-run on every change to the input file (foreground; Ctrl-C to stop). Requires a file
          path — not available on stdin

      --normalize
          Render verified non-canonical directive near-misses as if they were their canonical
          spelling (e.g. `［＃「梅」は小書き］` renders 梅 as small-letter emphasis instead of an inert hidden
          directive span) — the same near-misses `aozora::lint::non_canonical_directive` flags and
          `aozora fmt --fix` rewrites. Opt-in and read-only: without this flag an unrecognised
          directive stays a hidden `aozora-directive` span, and this never rewrites the input source
          (a read-only projection applies `--normalize`; a source rewrite uses `fmt --fix`).
          Consults the zero-false-positive Tier1 catalogue only

      --degraded
          Additionally reduce the lossy / judgment "degraded" forms Tier1 refuses (Tier2) — e.g.
          `［＃中文字、ゴシック体］` renders bold, and `［＃ここから最後まで３字下げ］` an indent that runs to the document
          end. Implies `--normalize`, is render-only, and never rewrites the source (a Tier2 misfire
          can reach only this render output). Looser than `--normalize`. See ADR-0026

      --color <WHEN>
          When to colourise diagnostics: `auto` (colour on a terminal, honouring `NO_COLOR` /
          `CLICOLOR` / `CLICOLOR_FORCE`), `always`, or `never`. Global — accepted after any
          subcommand. Governs `check`'s graphical diagnostics; `kinds` tables are always monochrome

          Possible values:
          - auto:   Colour when stdout is a terminal (honours `NO_COLOR` / `CLICOLOR` /
            `CLICOLOR_FORCE`)
          - always: Always colour, even when piped
          - never:  Never colour
          
          [default: auto]

  -v, --verbose...
          Increase log verbosity (repeatable): `-v` info, `-vv` debug, `-vvv` trace. Logs go to
          stderr only, so stdout — and the JSON / short diagnostic streams — stay byte-identical.
          `AOZORA_LOG` overrides this; cancels against `--quiet` (one axis). Global

  -q, --quiet
          Lower log verbosity to errors only — the opposite end of the `--verbose` axis (a single
          `-v` cancels it). Affects only stderr logging, never stdout. `AOZORA_LOG` overrides it.
          Global

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
