crates/aozora-cli/tests/snapshots/snapshot_cli__snapshot_top_level_help.snap
---
source: crates/aozora-cli/tests/snapshot_cli.rs
expression: "run(&[\"--help\"])"
---
Aozora Bunko notation parser CLI

Usage: aozora [OPTIONS] <COMMAND>

Commands:
  check        Run the lexer over a file and report diagnostics
  fmt          Format documents: round-trip parse ∘ to_source to the canonical form. Reads stdin,
               one file, many files, or directories; `--check` / `--diff` / `--list` verify without
               writing, `--write` rewrites in place, `--fix` also canonicalises flagged directive
               near-misses
  render       Render Aozora notation to HTML on stdout
  inspect      Emit a parsed document's JSON for one `aozora::json` envelope — `nodes` / `pairs` /
               `container-pairs` / `diagnostics` / `gaiji` — or the static `slugs` catalogue. The
               data counterpart to `schema`: `schema <kind>` prints the JSON Schema, `inspect
               <kind>` prints a document's data in that schema, byte-identical to every binding's
               `*_json()` output
  kinds        Tabulate every `NodeKind` / `PairKind` / `Severity` / `DiagnosticSource` / `Sentinel`
               / `InternalCheckCode` variant with its wire tag
  schema       Pretty-print the JSON Schema for one of the four JSON envelopes
  explain      Print prose for a `NodeKind` tag, or help / severity / URL for a diagnostic code
  pandoc       Project the parsed document to a Pandoc AST. Without `--format`, prints Pandoc JSON
               to stdout (consumable by `pandoc -f json -t <FORMAT>`); with `--format`, spawns
               pandoc and pipes the JSON through it
  completions  Print a shell completion script (`bash` / `zsh` / `fish` / `powershell` / `elvish` /
               `nushell`) on stdout. Generated from the live command tree, so it always matches the
               installed binary; release tarballs also ship these under `completions/`
  help         Print this message or the help of the given subcommand(s)

Options:
      --color <WHEN>
          When to colourise diagnostics: `auto` (colour on a terminal, honouring `NO_COLOR` /
          `CLICOLOR` / `CLICOLOR_FORCE`), `always`, or `never`. Global — accepted after any
          subcommand. Governs `check`'s graphical diagnostics; `kinds` tables are always monochrome

          Possible values:
          - auto:   Colour when stdout is a terminal (honours `NO_COLOR` / `CLICOLOR` /
            `CLICOLOR_FORCE`)
          - always: Always colour, even when piped
          - never:  Never colour
          
          [default: auto]

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  aozora check FILE.txt              # lex + report diagnostics
  aozora render FILE.txt > out.html  # render to HTML
  aozora inspect nodes FILE.txt         # parsed nodes as JSON
  aozora fmt --check FILE.txt        # CI format gate
  aozora explain unclosed_bracket    # explain a diagnostic code
  aozora completions zsh             # shell completion script

Document subcommands read stdin when given '-' or no path.
